Notmuch 0.11 (201x-xx-xx)
=========================

Performance
-----------

Automatic tag query optimization

  "notmuch tag" now automatically optimizes the user's query to
  exclude messages whose tags won't change.  In the past, we've
  suggested that people do this by hand; this is no longer necessary.


Notmuch 0.10.2 (2011-12-04)
===========================

Bug-fix release.
----------------

Fix crash in python bindings.

    The python bindings did not call g_type_init, which caused crashes
    for some, but not all users.

Notmuch 0.10.1 (2011-11-25)
===========================

Bug-fix release.
----------------

Fix --help argument

  Argument processing changes in 0.10 introduced a bug where "notmuch
  --help" crashed while "notmuch help" worked fine. This is fixed in
  0.10.1.

Notmuch 0.10 (2011-11-23)
=========================

New build and testing features
------------------------------

Emacs tests are now done in dtach. This means that dtach  is now
needed to run the notmuch test suite, at least until the checking for
prerequisites is improved.

Full test coverage of the stashing feature in Emacs.

New command-line features
-------------------------

Add "notmuch restore --accumulate" option

  The --accumulate switch causes the union of the existing and new tags to be
  applied, instead of replacing each message's tags as they are read in from
  the dump file.

Add search terms to  "notmuch dump"

  The dump command now takes an optional search term much like notmuch
  search/show/tag. The output file argument of dump is deprecated in
  favour of using stdout.

Add "notmuch search" --offset and --limit options

  The search command now takes options --offset=[-]N and --limit=N to limit
  the number of results shown.

Add "notmuch count --output" option

  The count command is now capable of counting threads in addition to
  messages. This is selected using the new --output=(threads|messages) option.

New emacs UI features
---------------------
